// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a11y label is cancel when cancelAndDelete 1`] = `
<RNGestureHandlerButton
  activeOpacity={0.3}
  borderless={true}
  collapsable={false}
  delayLongPress={600}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  hitSlop={
    {
      "bottom": 10,
      "left": 10,
      "right": 10,
      "top": 10,
    }
  }
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "opacity": 1,
        "width": 24,
      },
      {
        "cursor": undefined,
      },
    ]
  }
>
  <View
    accessibilityLabel="Cancel_and_delete_recording"
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    onFocus={[Function]}
    testID="message-composer-delete-audio"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 24,
          },
          [
            {
              "lineHeight": 24,
            },
            undefined,
          ],
          {
            "fontFamily": "custom",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</RNGestureHandlerButton>
`;

exports[`a11y label is delete otherwise and fires onPress 1`] = `
<RNGestureHandlerButton
  activeOpacity={0.3}
  borderless={true}
  collapsable={false}
  delayLongPress={600}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  hitSlop={
    {
      "bottom": 10,
      "left": 10,
      "right": 10,
      "top": 10,
    }
  }
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "opacity": 1,
        "width": 24,
      },
      {
        "cursor": undefined,
      },
    ]
  }
>
  <View
    accessibilityLabel="Delete_recording"
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    onFocus={[Function]}
    testID="message-composer-delete-audio"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 24,
          },
          [
            {
              "lineHeight": 24,
            },
            undefined,
          ],
          {
            "fontFamily": "custom",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</RNGestureHandlerButton>
`;
